--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <div class="container">
     <div class="header">
         <h1>시노펙스, 국산화 혈액여과기 유럽 CE MDR 인증 위한 환자임상 개시!</h1>
-        <p class="meta-info">시노펙스 ・ 2025. 3. 26. 10:10</p>
+        <p class="meta-info">시노펙스 ・ 2025. 3. 26.</p>
     </div>
 
     <div class="content">
